[gd_scene load_steps=4 format=2]

[ext_resource path="res://login.gd" type="Script" id=1]
[ext_resource path="res://addons/gamejolt_api_v2/main.gd" type="Script" id=2]
[ext_resource path="res://addons/gamejolt_api_v2/gj_icon.png" type="Texture" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="GameJoltAPI" type="HTTPRequest" parent="."]
script = ExtResource( 2 )
__meta__ = {
"_editor_icon": ExtResource( 3 )
}
private_key = " 377255"
game_id = "6ea3d97a82e5e71153198783140dd700"

[node name="Username" type="LineEdit" parent="."]
margin_left = 435.132
margin_top = 287.757
margin_right = 578.132
margin_bottom = 311.757

[node name="Password" type="LineEdit" parent="."]
margin_left = 435.132
margin_top = 327.757
margin_right = 578.132
margin_bottom = 351.757

[node name="Label" type="Label" parent="."]
margin_left = 359.383
margin_top = 293.25
margin_right = 433.383
margin_bottom = 307.25
text = "USERNAME:"

[node name="Label2" type="Label" parent="."]
margin_left = 356.874
margin_top = 333.389
margin_right = 433.874
margin_bottom = 347.389
text = "PASSWORD:"

[node name="Button" type="Button" parent="."]
margin_left = 481.419
margin_top = 367.192
margin_right = 536.419
margin_bottom = 387.192
text = "LOGIN"

[connection signal="api_session_opened" from="GameJoltAPI" to="." method="_on_GameJoltAPI_api_session_opened"]
[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
